--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,34 @@
-td { 
-    border: 2px solid darkmagenta;
-    height: 126px;
-    width: 126px;
+#container {
+    width: 320px;
+    height: 320px;
+    margin: auto;
+    margin-top: 100px;
+}
+#container h1 {
     text-align: center;
-    vertical-align: middle;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 90px;
+    font-size: 40px;
+    margin-bottom: 50px;
+}
+.q {
+    width: 100px;
+    height: 100px;
+    float: left;
+    margin: 0;
+    padding: 0;
     cursor: pointer;
-}
-
-table {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin-left: -189px;
-    top: 90px;
-}
-
-table tr:first-child td {
-    border-top: 0;
-}
-
-table tr:last-child td {
-    border-bottom: 0;
-}
-table tr td:last-child  {
-    border-right: 0;
-}
-table tr td:first-child  {
-    border-left: 0;
-} 
-.endgame {
-    display:none;
-    width: 75%;
-    top: 120px;
-    background-color: darkolivegreen;
-    position: absolute;
-    left: 50%;
-    margin-left: -100px;
-    padding-top: 50px;
-    padding-bottom: 50px;   
     text-align: center;
-    border-radius: 5px;
-    color: yellow;
-    font-size: 2em;
+    font-family: sans-serif;
+    font-size: 100px;
 }
-
+.q:hover {
+    background-color: blanchedalmond;
+}
+#q0, #q1, #q2, #q3, #q4, #q5 {
+    border-bottom: 10px solid black;
+}
+#q2, #q5, #q8, #q1, #q4, #q7 {
+    border-left: 10px solid black;
+}
+.winner {
+    color: magenta;
+}
